Fix footer icon vertical align

--- a/src/css/discord.css
+++ b/src/css/discord.css
@@ -980,6 +980,11 @@
   margin: 0
 }
 
+.embed .embed-footer-wrapper {
+  display: flex;
+  align-items: center;
+}
+
 .comment>:last-child .embed {
   margin-bottom: auto
 }
